# PluginLibrary

./: CMakeLists.txt  main.cpp
Lib/: CMakeLists.txt  UIInterface.h  helpers.h
Lib/src/Controller/: MainWindow.cpp  MainWindow.h
Lib/src/View/: CMakeLists.txt  MainView.qml  qmldir
